# Efficient-pedestrian-tracker-for-remote-connection-between-Jetson-Orin-Nano-and-iPhone

./: .gitignore  CMakeLists.txt  PROJECT_REPORT.md  README.md  baseline_pytorch.py
include/: cuda_preprocess.h  frame_queue.hpp  trt_engine.hpp  worker_threads.hpp
src/: cuda_preprocess.cu  main.cpp  trt_engine.cpp  worker_threads.cpp
